logos-codegen/tests/snapshots/codegen__error_callback1-tailcall-pre_1_82.snap
---
source: logos-codegen/tests/codegen.rs
expression: formatted
---
impl<'s> ::logos::Logos<'s> for TokenA {
    type Error = &'static str;
    type Extras = Vec<&'static str>;
    type Source = str;
    fn lex(
        lex: &mut ::logos::Lexer<'s, Self>,
    ) -> std::option::Option<std::result::Result<Self, Self::Error>> {
        use ::logos::internal::{
            LexerInternal, CallbackRetVal, CallbackResult, SkipRetVal, SkipResult,
        };
        use std::result::Result as _Result;
        use std::option::Option as _Option;
        use ::logos::Logos;
        type _Lexer<'s> = ::logos::Lexer<'s, TokenA>;
        macro_rules! _fast_loop {
            ($lex:ident, $test:ident, $offset:ident) => {
                'fast_loop : { while let Some(arr) = $lex .read:: < & [u8; 8usize] >
                ($offset) { if $test (arr[0usize]) { $offset += 0usize; break 'fast_loop;
                } if $test (arr[1usize]) { $offset += 1usize; break 'fast_loop; } if
                $test (arr[2usize]) { $offset += 2usize; break 'fast_loop; } if $test
                (arr[3usize]) { $offset += 3usize; break 'fast_loop; } if $test
                (arr[4usize]) { $offset += 4usize; break 'fast_loop; } if $test
                (arr[5usize]) { $offset += 5usize; break 'fast_loop; } if $test
                (arr[6usize]) { $offset += 6usize; break 'fast_loop; } if $test
                (arr[7usize]) { $offset += 7usize; break 'fast_loop; } $offset += 8usize;
                } while let Some(byte) = $lex .read:: < u8 > ($offset) { if $test (byte)
                { break 'fast_loop; } $offset += 1; } }
            };
        }
        macro_rules! _take_action {
            ($lex:ident, $offset:ident, $context:ident, $state:ident) => {
                { let action = _get_action($lex, $offset, $context); match action {
                CallbackResult::Emit(tok) => { return Some(Ok(tok)); },
                CallbackResult::Skip => { $lex .trivia(); $offset = $lex .offset();
                $context = 0usize; return state1($lex, $offset, $context); },
                CallbackResult::Error(err) => { return Some(Err(err)); },
                CallbackResult::DefaultError => { return Some(Err(_make_error($lex))); },
                } }
            };
        }
        #[inline]
        fn _make_error<'s>(lex: &mut _Lexer<'s>) -> <TokenA as Logos<'s>>::Error {
            let error = callback0(lex);
            error.into()
        }
        #[inline]
        fn _get_action<'s>(
            lex: &mut _Lexer<'s>,
            offset: usize,
            context: usize,
        ) -> CallbackResult<'s, TokenA> {
            match context {
                0 => {
                    lex.end_to_boundary(offset.max(lex.offset() + 1));
                    CallbackResult::Error(_make_error(lex))
                }
                _ => unreachable!(),
            }
        }
        fn state0<'s>(
            lex: &mut _Lexer<'s>,
            mut offset: usize,
            mut context: usize,
        ) -> _Option<_Result<TokenA, <TokenA as Logos<'s>>::Error>> {
            let other = lex.read::<u8>(offset);
            if let Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state1<'s>(
            lex: &mut _Lexer<'s>,
            mut offset: usize,
            mut context: usize,
        ) -> _Option<_Result<TokenA, <TokenA as Logos<'s>>::Error>> {
            let other = lex.read::<u8>(offset);
            if let Some(byte) = other {} else {
                if lex.offset() == offset {
                    return None;
                }
            }
            _take_action!(lex, offset, context, state)
        }
        state1(lex, lex.offset(), 0)
    }
}
